@@ -1,10 +1,10 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(CUnit/Sources/Framework/AssertImpl.c)
-AM_INIT_AUTOMAKE(CUnit, 1.0-5)
+AM_INIT_AUTOMAKE(CUnit, 1.0-6)
 
 PACKAGE=CUnit
 VERSION=1.0
-RELEASE=5
+RELEASE=6
 
 TOPDIR=`pwd`
 
